[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/CreateCharacter.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="CharacterCreation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 224.0
margin_top = 80.0
margin_right = 413.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "Enter Chararcter Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNameField" type="LineEdit" parent="."]
margin_left = 192.0
margin_top = 128.0
margin_right = 448.0
margin_bottom = 152.0
size_flags_horizontal = 11
custom_fonts/font = SubResource( 2 )
max_length = 12
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubmitButton" type="Button" parent="."]
margin_left = 288.0
margin_top = 168.0
margin_right = 351.0
margin_bottom = 188.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 3 )
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="."]
margin_top = 208.0
margin_right = 640.0
margin_bottom = 222.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="SubmitButton" to="." method="_on_SubmitButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
